Add validateDrug middleware and update routes

--- a/views/suppliers/form.ejs
+++ b/views/suppliers/form.ejs
@@ -1,23 +1,31 @@
 <%- include('../partials/header') %>
+
     <h2>
-        <%= product && product._id ? 'Edit Product' : 'New Product' %>
+        <%= supplier && supplier._id ? 'Edit Supplier' : 'New Supplier' %>
     </h2>
 
-    <form action="<%= action %>" method="POST">
-        <label>Name</label>
-        <input name="name" value="<%= product.name || '' %>" required />
-        <label>Price</label>
-        <input name="price" type="number" step="0.01" value="<%= product.price || '' %>" required />
-        <label>Quantity</label>
-        <input name="quantity" type="number" value="<%= product.quantity || '' %>" required />
-        <label>Supplier</label>
-        <select name="supplierId" required>
-    <option value="">-- choose supplier --</option>
-    <% suppliers.forEach(s => { %>
-      <option value="<%= s._id %>" <%= (product.supplierId && product.supplierId.toString() === s._id.toString()) ? 'selected':'' %>><%= s.name %></option>
-    <% }) %>
-  </select>
-        <button type="submit">Save</button>
-    </form>
+    <% if (error) { %>
+        <p style="color:red;">
+            <%= error %>
+        </p>
+        <% } %>
 
-    <%- include('../partials/footer') %>
+            <form action="<%= action %>" method="POST">
+                <label>Name</label>
+                <input name="name" value="<%= supplier.name || '' %>" required />
+
+                <label>Address</label>
+                <input name="address" value="<%= supplier.address || '' %>" required />
+
+                <label>Phone</label>
+                <input name="phone" value="<%= supplier.phone || '' %>" required />
+
+                <% if (supplier && supplier.code) { %>
+                    <label>Code</label>
+                    <input type="text" value="<%= supplier.code %>" disabled />
+                    <% } %>
+
+                        <button type="submit">Save</button>
+            </form>
+
+            <%- include('../partials/footer') %>
