--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,14 +1,14 @@
 <%- include('../partials/header') %>
-    <h1>Login</h1>
-    <% if (error) { %>
-        <p class="error">
-            <%= error %>
-        </p>
-        <% } %>
-            <form method="POST" action="/login">
-                <input name="username" placeholder="Username" required/>
-                <input name="password" placeholder="Password" type="password" required/>
-                <button>Login</button>
-            </form>
-            <p><a href="/forgot">Forgot password?</a></p>
-            <%- include('../partials/footer') %>
+
+    <h2>Login</h2>
+    <form action="/login" method="POST">
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+    </form>
+    <p style="color:red;">
+        <%= error %>
+    </p>
+    <p>Don't have an account? <a href="/register">Register</a></p>
+
+    <%- include('../partials/footer') %>
